# AI_PARALLELS_5D

./: .gitignore  LEARNING.md  LICENSE  README.md  requirements.txt
01-data-parallelism/cpp/src/: dp_mpi.cpp
01-data-parallelism/libtorch/: CMakeLists.txt  README.md
01-data-parallelism/libtorch/include/: dp_utils.hpp
01-data-parallelism/libtorch/scripts/: build.sh
01-data-parallelism/libtorch/src/: dp_basic.cpp  dp_matrix_multiply.cpp  main.cpp
01-data-parallelism/pytorch/: dp_basic.py  dp_ddp.py  dp_fsdp.py  dp_gradient_sync.py  dp_matrix_multiply.py  requirements.txt  run_multi_node.sh  run_single_node.sh
common/utils/: matrix_generator.py
docs/: 00-introduction.md  01-data-parallelism.md  02-pipeline-parallelism.md  03-tensor-parallelism.md  04-sequence-parallelism.md  05-expert-parallelism.md  06-hybrid-parallelism.md  README.md  benchmarks.md  setup-guide.md
